feat: contact paging